<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".frag_numpad">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="clear"
                android:text="@string/Clear"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_left_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/left_paren"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_right_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/right_paren"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/divide"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/seven"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/eight"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/nine"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/multiply"
                app:cornerRadius="50sp"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/four"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/five"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/six"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/minus"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/one"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/two"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/three"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/plus"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_numpad_swap"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="swap_keyboard"
                android:text="@string/numpad_swap"
                android:textSize="20sp"
                app:cornerRadius="50sp"
                app:icon="@drawable/ic_baseline_keyboard_24" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/zero"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_decimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/decimal"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="equals"
                android:text="@string/equals"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

    </TableLayout>

</FrameLayout>