<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frag_alt_numpad_one">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="clear"
                android:text="@string/Clear"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_left_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/left_paren"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_right_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/right_paren"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/divide"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_sin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/sin"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_cos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/cos"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_tan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/tan"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/multiply"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/exponent"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_square"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/square"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/sqrt"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/minus"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_negative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/negative"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_root"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/root"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_comma"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:contentDescription="@string/comma"
                android:onClick="type"
                android:text="@string/comma"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/plus"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_numpad_swap"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="swap_keyboard"
                android:text="@string/numpad_swap"
                android:textSize="20sp"
                app:cornerRadius="50sp"
                app:icon="@drawable/ic_baseline_keyboard_24" />

            <Button
                android:id="@+id/btn_pi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/pi"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_natural_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="type"
                android:text="@string/natural_number"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:onClick="equals"
                android:text="@string/equals"
                android:textSize="20sp"
                app:cornerRadius="50sp" />

        </TableRow>

    </TableLayout>

</FrameLayout>