<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frag_numpad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <TextView
            android:id="@+id/txt_display"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.5"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/text_display"
            android:scrollbars="vertical"
            android:textSize="96sp"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_store"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/store"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_var_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/var_A"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_var_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/var_B"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_var_C"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/var_C"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/backspace"
                android:onClick="backspace"
                app:cornerRadius="50sp"
                app:icon="@android:drawable/ic_input_delete" />
        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/frag_numpad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </fragment>

</androidx.constraintlayout.widget.ConstraintLayout>